# csci-4061-pa3

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: image_rotation.h  queue.h
src/: image_rotation.c  queue.c
